# learning_rust

./: .gitignore
collections_exercises/: Cargo.toml
collections_exercises/src/: main.rs  pig_latin.rs  statistics.rs
graphs/: Cargo.toml  documentation.mk  makefile  task.txt
graphs/algorithms/: Cargo.toml
graphs/algorithms/benches/: dijkstra_algorithm.rs  generate_graph_file.rs  kruskal_algorithm.rs  results.md
graphs/algorithms/src/: dijkstra.rs  errors.rs  kruskal.rs  lib.rs
graphs/algorithms/tests/: acceptance_tests.rs
graphs/algorithms/tests/benchmarks_data/: 100000_nodes.txt  10000_nodes.txt  1000_nodes.txt
graphs/algorithms/tests/data/: passing8.txt
graphs/graph/: Cargo.toml
graphs/graph/src/: adjacency_list.rs  dfs.rs  errors.rs  lib.rs  reader.rs  structures.rs
graphs/graph/tests/: acceptance_tests.rs
graphs/graph/tests/data/edge_errors/: error_parsing_edge_empty_line.txt  error_parsing_edge_missing_to_index.txt
graphs/runner/: Cargo.toml
graphs/runner/src/: cli.rs  errors.rs  generate_graph.rs  graph_file_generator.rs  lib.rs  main.rs
graphs/runner/src/cli_subcommands/: generate_graph_file.rs  mod.rs  run_algorithm.rs
graphs/runner/src/subcommands/: generate_graph_file.rs  run_algorithm.rs
graphs/runner/tests/: graph_file_generator_subcommands.rs
kruskals_algorithm/: Cargo.toml  TODO.md  rustfmt.toml  task.txt
kruskals_algorithm/graph/src/: dfs.rs  errors.rs  lib.rs  reader.rs  structures.rs
kruskals_algorithm/graph/tests/: acceptance_tests.rs
kruskals_algorithm/graph/tests/data/edge_errors/: error_parsing_edge_non_integer_weight.txt
kruskals_algorithm/kruskal/: Cargo.toml
kruskals_algorithm/kruskal/src/: lib.rs
kruskals_algorithm/kruskal/tests/: acceptance_tests.rs
kruskals_algorithm/runner/: Cargo.toml
kruskals_algorithm/runner/src/: main.rs
kruskals_algorithm/src/: algorithm.rs  errors.rs  lib.rs  main.rs
kruskals_algorithm/src/algorithm/: algorithm.rs
kruskals_algorithm/src/data/: dfs.rs  mod.rs  reader.rs  structures.rs
kruskals_algorithm/src/kruskal/: algorithm.rs
kruskals_algorithm/tests/: acceptance_tests.rs  example_tests.rs
kruskals_algorithm/tests/data/: error_too_few_edges.txt  error_too_many_edges.txt  error_wrong_to_index.txt  failing1.txt
kruskals_algorithm/tests/data/error_tests/creating_edge_errors/: error_edge_description_bad_from_index.txt  error_edge_description_bad_to_index.txt
kruskals_algorithm/tests/data/error_tests/edge_errors/: error_edge_description_wrong_from_index.txt  error_parsing_edge_missing_weight.txt
kruskals_algorithm/tests/data/error_tests/graph_building_errors/: error_parsing_graph_parameters_nodes_count.txt
kruskals_algorithm/tests/data/error_tests/parsing_graph_parameters_errors/: error_parsing_graph_parameters_edges_count.txt
minigrep/: Cargo.toml  test.txt
minigrep/src/: lib.rs  main.rs
newtypes/: Cargo.toml
newtypes/src/: lib.rs  string_newtype.rs
string-newtype/: Cargo.toml
string-newtype/src/: lib.rs  main.rs
utils/: Cargo.toml
utils/examples/use_default_logging/: cmd_args.rs  main.rs
utils/examples/use_logger_with_state/: cmd_args.rs  main.rs
utils/examples/use_tracing_crate/: main.rs
utils/src/: application_runner.rs  colored_error_messages.rs  lib.rs  num_newtype.rs  path_validators.rs  positive_integer.rs
weather_app/: Cargo.toml
weather_app/src/: lib.rs  main.rs  query.rs  weather_api_caller.rs
weather_app/src/raw_weather_data/: inner.rs  mod.rs  weather_data.rs
