[package]
name = "kruskals_algorithm"
version = "0.1.0"
authors = ["gcfbn <bmekarski@interia.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
[dependencies.clap]
version = "~2.33.3"
default-features = false
