[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
simple_logging = ["flexi_logger"]

[[example]]
name = "use_simple_logging"
path = "examples/use_simple_logging/lib.rs"

[dependencies]
atty = "0.2"
clap = "~3.0.0-beta.2"

derive_more = "0.99"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# colored_error_messages
termcolor = { version = "1.1" }

thiserror = "1.0.25"

log = "0.4.0"
flexi_logger = {version = "0.18", optional = true}

anyhow = "1.0"

[dev-dependencies]
test-case = "1.1.0"
