[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
default_logging = ["flexi_logger", "app_logger_has_state"]
app_logger_has_state = ["tracing", "tracing-subscriber", "tracing-appender"]

[dependencies]
atty = "0.2"
cfg-if = "1.0"
clap = "~3.0.0-beta.2"

derive_more = "0.99"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# colored_error_messages
termcolor = { version = "1.1" }

thiserror = "1.0.25"

log = "0.4.0"
flexi_logger = { version = "0.18", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing-appender = { version = "0.1", optional = true }

anyhow = "1.0"

[dev-dependencies]
test-case = "1.1.0"

[[example]]
name = "use_default_logging"
required-features = ["default_logging"]

[[example]]
name = "use_logger_with_state"
required-features = ["app_logger_has_state"]
